# scs-sdk-plugin

./: LICENSE  README.md  changelog.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-release.yml  upload-artifact.yml
scs-telemetry/: CMakeLists.txt
scs-telemetry/inc/: log.hpp  scs-telemetry-common.hpp  scs_config_handlers.hpp  scs_gameplay_event_handlers.hpp  tcp_server.hpp
scs-telemetry/src/: scs_config_handlers.cpp  scs_gameplay_event_handlers.cpp  scs_telemetry.cpp  scs_telemetry.cpp.orig  tcp_server.cpp
